# neurobcl

./: README.md  genindex.html  index.html  modules.html  neurobcl.html  py-modindex.html  pyproject.toml  search.html  searchindex.js
_modules/: index.html
_modules/neurobcl/: main.html
_modules/neurobcl/base/: model.html
docs/: conf.py  index.rst  neurobcl.base.rst  neurobcl.rst  neurobcl.trainers.rst
docs/gh-output-html/: .buildinfo  neurobcl.base.html  neurobcl.trainers.html  objects.inv
docs/gh-output-html/_modules/neurobcl/trainers/: dictionary_trainer.html
docs/gh-output-html/_sources/: modules.rst.txt
src/neurobcl/: main.py
src/neurobcl/base/: model.py
src/neurobcl/trainers/: dictionary_trainer.py
tests/: test_nike_simple.py  test_ratings_price.py  test_use_simple.py
